--- a/first-doc.tex
+++ b/first-doc.tex
@@ -17,6 +17,12 @@
 \usepackage{multirow} %Este pacote adciona suporte mesclagem linhas
 \usepackage{tabularx} %Este pacote permite personalizaçao margens da tabela
 \usepackage{amsmath} %Este pacote inclui modo matemático
+
+%% Redefinição de comandos matemáticos
+%%
+\renewcommand{\sin}{\mathrm{ sen\hspace{0.5mm} }}
+\renewcommand{\tan}{\mathrm{ tg\hspace{0.5mm} }}
+
 %Cores personalizadas
 \definecolor{minhacorrgb}{RGB}{85,158,131} %define cor personalizada
 
@@ -324,6 +330,8 @@
 			%%
 			
 			\section{Seção matemática}
+			%%ESTUDO DE EQUAÇÕES
+			%%
 			\subsection{Ambiente de equações}
 				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas sed tempus urna et pharetra pharetra massa massa ultricies. Duis at tellus at urna condimentum mattis pellentesque. Tincidunt arcu non sodales neque sodales ut etiam sit. Et egestas quis ipsum suspendisse ultrices gravida dictum fusce ut. Bibendum ut tristique et egestas quis ipsum. 
 				Este é uma equação de segundo grau: $ ax^2 +bx +c = 0$. %Equação inline
@@ -350,6 +358,8 @@
 				
 				Etiam erat velit scelerisque in dictum non consectetur a erat. Tellus at urna condimentum mattis pellentesque. Sit amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Magnis dis parturient montes nascetur. Amet venenatis urna cursus eget nunc scelerisque viverra mauris in. 
 				\newpage
+			%% ESTUDO DE MATRIZES
+			%%
 			\subsection{Matrizes}
 				Porttitor lacus luctus accumsan tortor posuere. Sed risus pretium quam vulputate dignissim suspendisse in est. Nunc vel risus commodo viverra maecenas. Tristique sollicitudin nibh sit amet. Condimentum mattis pellentesque id nibh. Porttitor leo a diam sollicitudin tempor id eu nisl nunc. Nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Netus et malesuada fames ac turpis. 
  				
@@ -383,9 +393,17 @@
  				
  				
 				Consectetur lorem donec massa sapien faucibus et molestie ac. Suspendisse in est ante in nibh mauris cursus mattis molestie. Purus gravida quis blandit turpis cursus in hac habitasse platea. Suscipit adipiscing bibendum est ultricies. Viverra adipiscing at in tellus integer feugiat scelerisque. Urna duis convallis convallis tellus id interdum velit laoreet id. Amet justo donec enim diam vulputate. Lectus arcu bibendum at varius. Felis donec et odio pellentesque diam volutpat commodo. Egestas integer eget aliquet nibh. Nec sagittis aliquam malesuada bibendum. Suspendisse faucibus interdum posuere lorem ipsum dolor sit amet consectetur.
-			
-			Tortor at risus viverra adipiscing at in tellus integer feugiat. Varius morbi enim nunc faucibus a pellentesque sit amet. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Eu feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Lacus viverra vitae congue eu consequat ac felis donec. 
-			
-			Et egestas quis ipsum suspendisse ultrices. Sed risus pretium quam vulputate. Nec sagittis aliquam malesuada bibendum arcu vitae. Donec ultrices tincidunt arcu non sodales neque sodales ut etiam. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Feugiat in fermentum posuere urna nec. Nunc pulvinar sapien et ligula ullamcorper. Blandit aliquam etiam erat velit scelerisque. Tortor posuere ac ut consequat semper viverra nam libero. Cras adipiscing enim eu turpis egestas. Pharetra magna ac placerat vestibulum lectus mauris ultrices. 
+			\subsection{Redefinição de comandos}
+				Tortor at risus viverra adipiscing at in tellus integer feugiat. Varius morbi enim nunc faucibus a pellentesque sit amet. Turpis egestas sed tempus urna et pharetra pharetra massa massa. Eu feugiat pretium nibh ipsum consequat nisl vel pretium lectus. Lacus viverra vitae congue eu consequat ac felis donec. 
+				Comandos traduzidos:
+				
+				\begin{equation*}
+					\sin{2x^2}
+				\end{equation*}
+				
+				\begin{equation*}
+					\tan{2x^2}
+				\end{equation*}
+				Et egestas quis ipsum suspendisse ultrices. Sed risus pretium quam vulputate. Nec sagittis aliquam malesuada bibendum arcu vitae. Donec ultrices tincidunt arcu non sodales neque sodales ut etiam. Tincidunt augue interdum velit euismod in pellentesque massa placerat duis. Feugiat in fermentum posuere urna nec. Nunc pulvinar sapien et ligula ullamcorper. Blandit aliquam etiam erat velit scelerisque. Tortor posuere ac ut consequat semper viverra nam libero. Cras adipiscing enim eu turpis egestas. Pharetra magna ac placerat vestibulum lectus mauris ultrices. 
 \end{document}
 		
