--- a/slides/first_slide.tex
+++ b/slides/first_slide.tex
@@ -127,14 +127,19 @@
 				\uncover<2->{\item O item anterior foi ocultado na exibição da fórmula (pausa 4):}
 				\only<4->
 				{
+					
 					\begin{equation}
 					x^2 + bx + c = 0
 					\end{equation}
+					
 				}
 			\end{itemize}
 		\end{block}
 	\end{frame}
-
+	
+	\begin{frame}
+		
+	\end{frame}
 \end{document}
 	
 	
